--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,113 @@
 # /home/stark007/Projects/Redactify/.gitignore
 
-venv/
+# Redactify - Advanced .gitignore for Python/Flask PDF Processing Application
+
+# Python
 __pycache__/
-*.pyc
-*.log
-*.sqlite # If you use sqlite
-instance/ # If using instance folders
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Sensitive config files
+# Virtual Environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+env.bak/
+venv.bak/
+
+# Flask
+instance/
+.webassets-cache
+flask_session/
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Environment variables and secrets
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*.local
 
-# Uploads and Temp files (optional, depends if you want to track empty dirs)
-upload_files/
-temp_files/
+# Log files
+*.log
+logs/
+log/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Add other OS or IDE specific files (e.g., .DS_Store, .idea/, .vscode/)
-.DS_Store
+# Application specific - Data files
+upload_files/*
+!upload_files/.gitkeep
+temp_files/*
+!temp_files/.gitkeep
+data/*
+!data/.gitkeep
+
+# Generated PDF files
+*.pdf
+!example_pdfs/*.pdf  # Keep example PDFs for testing if needed
+
+# Unit tests and coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Profiling
+.prof
+
+# IDE specific files
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
