--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ presidio_config:
   nlp_config:
     nlp_engine_name: spacy
     models: [{ "lang_code": "en", "model_name": "en_core_web_trf" }] # Transformer model (high accuracy)
-    # Alternative options: en_core_web_lg (large), en_core_web_md (medium), en_core_web_sm (small)
+    # Alternative options: en_core_web_lg (large), en_core_web_md (medium), en_core_web_sm (small), en_core_web_trf
   supported_languages: ["en"]
   # Uncomment and customize the following to add custom recognizers:
   # recognizers:
