docker was fixed

--- a/Redactify/requirements.txt
+++ b/Redactify/requirements.txt
@@ -19,7 +19,8 @@ pyzbar>=0.1.8  # For QR code detection
 # Computer Vision & OCR
 Pillow>=9.0.0  # Python Imaging Library
 opencv-python>=4.5.0  # Computer Vision library
-paddleocr>=2.5.0  # OCR engine for text detection (pulls paddlepaddle CPU by default)
+paddlepaddle>=2.5.0  # Deep learning framework used by PaddleOCR
+paddleocr>=2.5.0  # OCR engine for text detection
 layoutparser>=0.3.4  # For document layout analysis
 pytesseract>=0.3.8  # OCR engine
 
