--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -54,19 +54,26 @@ jobs:
           REDIS_HOST=$(az redis show --name redactify-redis --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query hostName -o tsv)
           echo "connection_string=redis://:$REDIS_KEY@$REDIS_HOST:6380/0" >> $GITHUB_OUTPUT
 
+      - name: Authenticate with GHCR
+        run: |
+          echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ secrets.GHCR_USERNAME }} --password-stdin
+
       - name: Deploy Web Container App
         run: |
           az containerapp create \
             --name redactify-web \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --environment ${{ env.AZURE_CONTAINER_APP_ENV }} \
-            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify/redactify-web:latest \
+            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify-web:latest \
             --target-port 5000 \
             --ingress external \
             --min-replicas 1 \
             --max-replicas 3 \
             --cpu 1.0 \
             --memory 2Gi \
+            --registry-server ghcr.io \
+            --registry-username ${{ secrets.GHCR_USERNAME }} \
+            --registry-password ${{ secrets.GHCR_TOKEN }} \
             --env-vars REDACTIFY_REDIS_URL="${{ steps.redis.outputs.connection_string }}" FLASK_ENV=production
 
       - name: Deploy Celery Worker Container App
@@ -75,11 +82,14 @@ jobs:
             --name redactify-celery \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --environment ${{ env.AZURE_CONTAINER_APP_ENV }} \
-            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify/redactify-celery:latest \
+            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify-celery:latest \
             --min-replicas 1 \
             --max-replicas 2 \
             --cpu 1.0 \
             --memory 2Gi \
+            --registry-server ghcr.io \
+            --registry-username ${{ secrets.GHCR_USERNAME }} \
+            --registry-password ${{ secrets.GHCR_TOKEN }} \
             --env-vars REDACTIFY_REDIS_URL="${{ steps.redis.outputs.connection_string }}" FLASK_ENV=production \
             --command "celery" \
             --args "-A,Redactify.services.celery_service.celery,worker,--loglevel=info,-Q,redaction,--concurrency=2,-E"
