--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,5 @@
-name: Deploy to Azure
+name: Build and Deploy to Azure Container Apps
+# This workflow builds and deploys the Redactify application to Azure Container Apps
 
 on:
   workflow_run:
